repository/package/skin/src/main/webapp/screen.css
/* ... */
.hippo-window-dialog-title{font-size: 11px;}
.hippo-window-dialog-question{font-weight: bold}

/* Wicket Modal windows overwrite */
.hippo-root div.wicket-modal div.w_blue div.w_top, 
.hippo-root div.wicket-modal div.w_blue div.w_bottom,
.hippo-root div.wicket-modal div.w_blue div.w_topLeft,
.hippo-root div.wicket-modal div.w_blue div.w_topRight,
.hippo-root div.wicket-modal div.w_blue div.w_bottomRight,
.hippo-root div.wicket-modal div.w_blue div.w_bottomLeft,
.hippo-root div.wicket-modal div.w_blue a.w_close{
background-image: url(images/box-blue.png);}

.hippo-root div.wicket-modal div.w_blue div.w_left,
.hippo-root div.wicket-modal div.w_blue div.w_right {
background-image:url(images/box-blue2.png);}

/* .hippo-root div.wicket-modal div.w_caption{background: url("images/box-blue-caption.png") repeat-x; height: 20px; padding: 6px;} */
.hippo-root div.wicket-modal div.w_caption{height: 24px; background: #999999; text-align: center; color: #f2f2f2}
.hippo-root div.wicket-modal div.w_caption span{color: white; font-size: 11px; font-weight: bold; margin: 0px; padding: 0px; position: relative;}
.hippo-root div.w_blue a.w_close{width: 44px; height: 18px; background-position: -154px -48px;}
.hippo-root div.w_blue a.w_close:hover{background-position: -154px -66px; width: 44px; height: 18px;}
.hippo-root div.wicket-modal div.w_content {background: white url("images/box-blue-back.png") repeat-x bottom left} 
.hippo-root div.wicket-modal div.w_content_3{border: none}
.hippo-root div.wicket-modal div.w_content_2 {padding-top: 0px}
.hippo-root div.wicket-modal div.w_content_1{margin-right: 7px;}
.hippo-root div.wicket-modal div.w_right_1 {margin-left:7px;}

/* Overlay on full application on popup styling */
.hippo-root div.wicket-mask-dark{opacity: 0.5; background-image:url("images/transparent-back.png"); filter:alpha(opacity=0.5)}

/* Picker General Styling */
.hippo-picker{background: url("images/picker-back.png") repeat-y; height: 331px; border-bottom: 1px solid #afafaf}
.hippo-picker-tree{width: 193px; float: left;} 
.hippo-picker-tree .hippo-tree{height: 281px; width: 193px}
.hippo-picker-list-details{height: 331px; margin-left: 194px; background: #ffffff url('images/silverBack3.png') repeat-x; width: auto; position: relative; overflow: auto}
.hippo-picker-properties{clear:both; height: 35px; padding: 10px; margin-top:25px;}
.hippo-picker .hippo-list-details .hippo-list-paging td{width: 630px; text-align: right;}
.hippo-picker .hippo-window-form td input{width: 200px}

/*
.hippo-list-paging{position: absolute; bottom: 0px; left: 0px; background: url("images/hippo-paging-back.png") repeat-x left bottom; width: 100%; color: #afafaf}
.hippo-list-details .hippo-list-paging td{padding: 4px; text-align: center; border-bottom: 0px; width: 190px;}
.hippo-list-paging td div{margin-top: 20px; margin-bottom: 2px; width: 100%;}
.hippo-list-paging td a{padding: 3px; color: #909090; border: 1px solid #afafaf}
.hippo-list-paging td span{padding: 3px;}
.hippo-list-paging td a:hover{background: white; color: black; border: 1px solid #666666}
.hippo-list-paging td span em, .hippo-list-paging td a em{font-style: normal}
*/

.hippo-picker-navigation{background: url("images/silver4.png") repeat-x; height: 20px; width: 635px; border-bottom: 1px solid #afafaf; margin-left: 194px; padding-top: 2px; padding-bottom: 2px; padding-left: 2px;}
.hippo-picker-list-details tr.hippo-list-paging td div {margin-bottom: 2px; margin-top: 10px; width: 100%;}
.hippo-picker-navigation-buttons{background: url("images/hippo-picker-navigation-back.png") repeat-x;}
.hippo-window-form td div.hippo-picker-navigation-buttons input, .hippo-picker-navigation-buttons input{float: left; padding: 0px; height: 22px; width: 24px; font-size: 11px; background: url("images/hippo-picker-navigation-buttons-back.png") no-repeat; background-position: 0px -20px; border: none; margin: 0px; text-indent: -9999px;}

.hippo-picker-navigation-breadcrumbs {float: left; margin-left: 2px; background-image: url("images/hippo-picker-navigation-breadcrumb.png"); background-position: left 20px; padding-left: 15px;}
.hippo-picker-navigation-breadcrumbs li {display: block; float: left;}

.hippo-picker-navigation-breadcrumbs li em, 
.hippo-picker-navigation-breadcrumbs li a{
display: block; float: left; 
height: 20px; 
background-image: url("images/hippo-picker-navigation-breadcrumb.png"); background-repeat: no-repeat;
background-position: right 0px;
padding-right: 30px; 
line-height: 18px;}

.hippo-picker-navigation-breadcrumbs li.firstlast em,
.hippo-picker-navigation-breadcrumbs li.firstlast a{background-position: right -40px}
.hippo-picker-navigation-breadcrumbs li.first em,
.hippo-picker-navigation-breadcrumbs li.first a{background-position: top right; padding-right: 30px;}
.hippo-picker-navigation-breadcrumbs li.last em,
.hippo-picker-navigation-breadcrumbs li.last a{background-position: right -40px;}

.hippo-picker-navigation-breadcrumbs li a:hover{text-decoration: underline}
/*
.hippo-picker-navigation-breadcrumbs li a:hover{background-position: right -20px}
.hippo-picker-navigation-breadcrumbs li.firstlast a:hover{background-position: right -60px}
.hippo-picker-navigation-breadcrumbs li.first a:hover{background-position: 0px 0px}
.hippo-picker-navigation-breadcrumbs li.last a:hover{background-position: 0px 0px}
*/

/* Image Picker */
.hippo-picker-properties label{float: left; margin-right: 5px; padding: 2px; line-height: 21px;}
body .hippo-picker-properties input{border: 1px solid #afafaf; padding: 4px; line-height: 16px; background: url("images/hippo-window-input-back.png") no-repeat; width: 660px}
.hippo-picker-list-details table tr th{padding: 1px; padding-left: 4px; padding-bottom: 2px; border: 1px solid #afafaf; border-right: 0px; border-bottom: none;}

/* Referring documents */
.hippo-referring-documents {margin: 5px; height: 365px;}
.hippo-referring-documents-list {height: 245px; position: relative; margin-top: 8px;}
/* ... */

